--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="addTodo">タスクを追加</button>
     </div>
     <div>
-        <ul id="todolist"></ul>
+        <ul id="todoList"></ul>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="app.js"></script>
